--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   google_fonts: ^3.0.1
   http: ^0.13.5
   google_sign_in: ^5.4.2
+  geocoder: ^0.2.1
 
 dev_dependencies:
   flutter_test:
