--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   http: ^0.13.5
   google_sign_in: ^5.4.2
   geocoder: ^0.2.1
+  pusher_websocket_flutter: ^0.2.0
 
 dev_dependencies:
   flutter_test:
