--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,10 @@ dependencies:
   google_sign_in: ^5.4.2
   geocoder: ^0.2.1
   pusher_websocket_flutter: ^0.2.0
+  intl: ^0.18.0
+  dio:
+  flutter_polyline_points:
+  google_maps_flutter:
 
 dev_dependencies:
   flutter_test:
@@ -33,8 +37,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/bg_map.jpeg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
